--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <header>
             <div class="content"></div>
         </header>
-        <div class="main"></div>
+
+        <div class="main">
+            <div class="content"></div>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
