--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <div class="content"></div>
         </div>
 
+        <footer>
+            <div class="content"></div>
+        </footer>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 
