--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Media Center</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -23,7 +23,11 @@
         </header>
 
         <div class="main">
-            <div class="content"></div>
+            <div class="content">
+                <div class="featured-video">
+                    <video src=""></video>
+                </div>
+            </div>
         </div>
 
         <footer>
